--- a/css/styles.css
+++ b/css/styles.css
@@ -437,10 +437,6 @@ margin-bottom: 16px;
     height: 40px; 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.footer-links-container {
- margin-right: 692px;
-}
 .icon-footer-social {
     fill: #f4f4fd;
 }
@@ -456,3 +452,57 @@ margin-bottom: 16px;
         background-color: #31d0aa;
     }
     
+    .backdrop {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(30, 24, 35, 0.5);
+        position: fixed;
+        top: 0;
+    }
+
+    .modal {
+        position: absolute;
+    width: 408px;
+    min-height: 584px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 64px 24px 31px 24px;
+    }
+
+.modal-close {
+    position: absolute;
+    top: 16px;
+    right: 24px;
+    border-radius: 100%;
+    fill: #e7e9fc;
+stroke-width: 1px;
+stroke: rgba(0, 0, 0, 0.1);
+}
+.modal-title {
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 16px;
+}
+.icon-modal-close {
+    fill: #f4f4fd;
+}
+
+.icon-footer-sendpict {
+    fill: #f4f4fd;
+}
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-bottom: 8px;
+    padding-left: 23px;
+}
+
