--- a/css/styles.css
+++ b/css/styles.css
@@ -451,13 +451,32 @@ margin-bottom: 16px;
         background-color: #31d0aa;
         background-color: #31d0aa;
     }
-    
+    .footer-subscribe-container {
+        display: flex;
+    }
+    .subscribe-btn {
+        border-radius: 4px;
+padding: 8px 24px;
+width: 165px;
+height: 40px;
+background: #4d5ae5;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+    }
+
     .backdrop {
         width: 100%;
         height: 100%;
         background-color: rgba(30, 24, 35, 0.5);
         position: fixed;
         top: 0;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
     }
 
     .modal {
@@ -502,7 +521,91 @@ margin-bottom: 16px;
     height: 40px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    margin-bottom: 8px;
-    padding-left: 23px;
+    padding-left: 38px;
+    outline: transparent;
+}
+.modal-input:focus {
+border-color: #4d5ae5;
+}
+.modal-input:focus + .modal-icon {
+    fill: #4d5ae5;   
 }
 
+.modal-btn {
+border-radius: 4px;
+padding: 16px 32px;
+width: 169px;
+height: 56px;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+background: #4d5ae5;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.04em;
+text-align: center;
+color: #fff;
+display: block;
+margin: 0 auto;
+}
+.modal-label {
+font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: #8e8f99;
+margin-bottom: 4px;
+}
+
+.modal-field {
+    margin-bottom: 8px;
+}
+.modal-field-wrap {
+    position: relative;
+}
+
+.modal-icon {
+position: absolute;
+left: 19px;
+top: 50%;
+transform: translateY(-50%);
+}
+.modal-text {
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    outline: transparent;
+    padding: 8px 16px;
+    resize: none;
+}
+.modal-text {
+    font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-text-policy {
+    font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+color: #8e8f99;
+}
+
+.priv-pol {
+    line-height: 133%;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;  
+}
+.modal-check-feild {
+    margin-bottom: 24px;
+}
+
+modal-check {
+    border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+}
