--- a/css/styles.css
+++ b/css/styles.css
@@ -451,11 +451,36 @@ margin-bottom: 16px;
         background-color: #31d0aa;
         background-color: #31d0aa;
     }
-    .footer-subscribe-container {
+  
+    .subscribe-text {
+        margin-bottom: 16px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #ffffff;
+    }
+    .footer-subscribe-form {
         display: flex;
     }
-    .subscribe-btn {
+    .footer-subscribe-label {
+        gap: 24px;
+    }
+    .subscribe-footer-text {
+        width: 264px;
+        height: 40px;
+        border: 1px solid #ffffff;
+        background-color: transparent;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+        padding-left: 16px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
+        color: #ffffff;
+    }
+    .subscribe-btn {
+    border-radius: 4px;
 padding: 8px 24px;
 width: 165px;
 height: 40px;
@@ -466,17 +491,23 @@ line-height: 150%;
 letter-spacing: 0.04em;
 text-align: center;
 color: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+cursor: pointer;
+border: none;
     }
 
     .backdrop {
         width: 100%;
         height: 100%;
-        background-color: rgba(30, 24, 35, 0.5);
+        background-color: background-color: rgba(46, 47, 66, 0.4)
         position: fixed;
         top: 0;
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .modal {
@@ -489,6 +520,8 @@ color: #fff;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 64px 24px 31px 24px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 .modal-close {
