--- a/css/styles.css
+++ b/css/styles.css
@@ -501,13 +501,14 @@ border: none;
     .backdrop {
         width: 100%;
         height: 100%;
-        background-color: background-color: rgba(46, 47, 66, 0.4)
+        background-color: rgba(46, 47, 66, 0.4);
         position: fixed;
         top: 0;
         opacity: 0;
         visibility: hidden;
         pointer-events: none;
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     }
 
     .modal {
