--- a/css/styles.css
+++ b/css/styles.css
@@ -527,10 +527,19 @@ border: none;
 
 .modal-close {
     position: absolute;
-    top: 16px;
+    top: 24px;
     right: 24px;
-    border-radius: 100%;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
     fill: #e7e9fc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 0;
+
 stroke-width: 1px;
 stroke: rgba(0, 0, 0, 0.1);
 }
