--- a/css/styles.css
+++ b/css/styles.css
@@ -512,7 +512,6 @@ border: none;
         visibility: hidden;
         pointer-events: none;
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     }
 
     .modal {
@@ -532,21 +531,27 @@ border: none;
 .modal-close {
     position: absolute;
     top: 24px;
+    width: 24px;
     right: 24px;
     height: 24px;
     border-radius: 50%;
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
     fill: #e7e9fc;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 0;
-
 stroke-width: 1px;
 stroke: rgba(0, 0, 0, 0.1);
 }
+.modal-close:hover, .modal-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
 .modal-title {
 font-weight: 500;
 font-size: 16px;
@@ -557,7 +562,7 @@ color: #2e2f42;
 margin-bottom: 16px;
 }
 .icon-modal-close {
-    fill: #f4f4fd;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-footer-sendpict {
@@ -571,6 +576,8 @@ margin-bottom: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     padding-left: 38px;
     outline: transparent;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .modal-input:focus {
 border-color: #4d5ae5;
@@ -603,6 +610,7 @@ line-height: 117%;
 letter-spacing: 0.04em;
 color: #8e8f99;
 margin-bottom: 4px;
+display: block;
 }
 
 .modal-field {
@@ -653,7 +661,7 @@ color: #8e8f99;
     margin-bottom: 24px;
 }
 
-modal-check {
+.modal-check {
     border-radius: 2px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 }
