--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,10 @@ margin-bottom: 16px;
         display: flex;
         gap: 24px;
     }
+    .icon-footer-sendpict {
+        fill: #f4f4fd;
+        margin-left: 16px;
+    }
     .footer-subscribe-label {
         gap: 24px;
     }
@@ -513,7 +517,11 @@ border: none;
         pointer-events: none;
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
     .modal {
         position: absolute;
     width: 408px;
@@ -523,7 +531,7 @@ border: none;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 64px 24px 31px 24px;
+    padding: 72px 24px 24px 24px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -544,14 +552,17 @@ border: none;
     fill: #e7e9fc;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 0;
-stroke-width: 1px;
-stroke: rgba(0, 0, 0, 0.1);
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
 }
-.modal-close:hover, .modal-close:focus {
+.modal-close:hover {
     background-color: #404bbf;
     border: none;
 }
-
+.modal-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
 .modal-title {
 font-weight: 500;
 font-size: 16px;
@@ -564,10 +575,11 @@ margin-bottom: 16px;
 .icon-modal-close {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.icon-footer-sendpict {
-    fill: #f4f4fd;
-    margin-left: 16px;
+.modal-close:hover + .icon-modal-close {
+    fill: #ffffff
+}
+.modal-close:focus + .icon-modal-close {
+    fill: #ffffff
 }
 .modal-input {
     width: 100%;
@@ -580,10 +592,11 @@ margin-bottom: 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .modal-input:focus {
-border-color: #4d5ae5;
+border-color: #4D5AE5;
 }
+
 .modal-input:focus + .modal-icon {
-    fill: #4d5ae5;   
+    fill: #4D5AE5;   
 }
 
 .modal-btn {
