--- a/css/styles.css
+++ b/css/styles.css
@@ -602,7 +602,7 @@ border-color: #4D5AE5;
 .modal-btn {
 border-radius: 4px;
 padding: 16px 32px;
-width: 169px;
+min-width: 169px;
 height: 56px;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background: #4d5ae5;
@@ -615,6 +615,9 @@ text-align: center;
 color: #fff;
 display: block;
 margin: 0 auto;
+cursor: pointer;
+border: none;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-label {
 font-weight: 400;
@@ -632,12 +635,16 @@ display: block;
 .modal-field-wrap {
     position: relative;
 }
+.modal-field-comment {
+    margin-bottom: 16px
+}
 
 .modal-icon {
 position: absolute;
-left: 19px;
+left: 16px;
 top: 50%;
 transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-text {
     width: 100%;
@@ -647,13 +654,16 @@ transform: translateY(-50%);
     outline: transparent;
     padding: 8px 16px;
     resize: none;
-}
-.modal-text {
     font-weight: 400;
 font-size: 12px;
 line-height: 117%;
 letter-spacing: 0.04em;
 color: rgba(46, 47, 66, 0.4);
+background-color: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-text:focus {
+    border-color: #4D5AE5;
 }
 
 .modal-text-policy {
@@ -665,16 +675,20 @@ color: #8e8f99;
 }
 
 .priv-pol {
-    line-height: 133%;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
     color: #4d5ae5;  
 }
 .modal-check-feild {
     margin-bottom: 24px;
 }
 
-.modal-check {
-    border-radius: 2px;
+.checkbox-span-icon {
+width: 16px;
+height: 16px;
 border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 2px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: inline-flex;
+align-items: center;
+justify-content: center;
+fill: transparent;
 }
