--- a/css/styles.css
+++ b/css/styles.css
@@ -574,11 +574,12 @@ margin-bottom: 16px;
 }
 .icon-modal-close {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #2E2F42;
 }
-.modal-close:hover + .icon-modal-close {
+.modal-close:hover .icon-modal-close {
     fill: #ffffff
 }
-.modal-close:focus + .icon-modal-close {
+.modal-close:focus .icon-modal-close {
     fill: #ffffff
 }
 .modal-input {
@@ -691,4 +692,10 @@ display: inline-flex;
 align-items: center;
 justify-content: center;
 fill: transparent;
+}
+
+.modal-check:checked + .modal-text-policy span {
+    background-color: #404bbf;
+    border: none;
+    fill:#F4F4FD;
 }
